# cluster

./: CMakeLists.txt  package.xml
include/: cluster.hpp
include/cluster_inference/: cluster_inference.cpp  cluster_inference.hpp
include/dummy_inference/: darknet_inference.cpp  darknet_inference.hpp  yolov7.cpp  yolov7.hpp
include/dummy_inference/include/yolov7/: main.cpp
include/dummy_inference/include/yolov7/include/: logging.h
include/pcan/: ObjectDetectionsSender.cpp  ObjectDetectionsSender.hpp
launch/: slot_monitor1_launch.py  slot_monitor2_launch.py  slot_monitor3_launch.py  slot_monitor_launch.py
src/: cluster.cpp
src/exec/: cluster_exec.cpp
